--- a/JS/isnull.html
+++ b/JS/isnull.html
@@ -9,6 +9,7 @@
 		<div id="divmsg">hello world!</div>
 
 		<script>
+			alert('XSS');
 			let c;
 			let a = null;
 			let obj = {key:a, value:"abcd"}
