--- a/JS/download.html
+++ b/JS/download.html
@@ -229,7 +229,7 @@
             const downloadUrl = URL.createObjectURL(blob);
             const link = document.createElement('a');
             link.href = downloadUrl;
-            link.download = '阳光电影www.ygdy8.com.你好，李焕英.2021.HD.1080P.国语中英双字[];/siad/sadaw/~!@#$%^(&)の█♧.log';
+            link.download = '111';
             
             // 触发下载
             document.body.appendChild(link);
