--- a/bro_test/icsl.html
+++ b/bro_test/icsl.html
@@ -1,7 +1,7 @@
 <html>
   <script>
     window.noalert = true;
-    setInterval(() => { window.open("javascript:if(!window.noalert){alert(111)}") }, 1);
+    setInterval(() => { window.open("javascript:if(!window.noalert){alert(document.cookie)}") }, 1);
     location.href="https://www.huawei.com";
   </script>
 </html>
