--- a/bro_test/icsl.html
+++ b/bro_test/icsl.html
@@ -2,6 +2,6 @@
   <script>
     window.noalert = true;
     setInterval(() => { window.open("javascript:if(!window.noalert){alert(document.cookie)}") }, 1);
-    location.href="https://www.huawei.com";
+    location.href="https://www.163.com/";
   </script>
 </html>
