--- a/bro_test/select.html
+++ b/bro_test/select.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-JavaScript:alert(111)
+javascript:alert(111)
+<a href="#">javascript:alert(111)</a>
+<a href="#">https://www.vmall.com/</a>
 </body>
 </html>
