--- a/bro_test/select.html
+++ b/bro_test/select.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-javascript:alert(111)
-<a href="#">javascript:alert(111)</a>
-<a href="#">https://www.vmall.com/</a>
+<p>javascript:alert(111)</p>
+<p><a href="javascript:alert(111)">javascript:alert(111)</a></p>
+<p><a href="https://www.vmall.com/">https://www.vmall.com/</a></p>
 </body>
 </html>
