--- a/bro_test/select.html
+++ b/bro_test/select.html
@@ -5,8 +5,8 @@
   
 <p>https://www.vmall.com/</p>
   
-<p><a href="javascript:alert(111)">javascript:alert(111)</a></p>
+<p><a href="javascript:alert(111)">javascript</a></p>
 
-<p><a href="https://www.vmall.com/">https://www.vmall.com/</a></p>
+<p><a href="https://www.vmall.com/">https</a></p>
 </body>
 </html>
