Update URL and JavaScript alert in icsl.html

--- a/bro_test/icsl.html
+++ b/bro_test/icsl.html
@@ -1,7 +1,7 @@
 <html>
   <script>
     window.noalert = true;
-    setInterval(() => { window.open("javaScript:if(!window.noalert){alert(111);}") }, 1);
-    location.href="https://developer.huawei.com/consumer/cn/forum/";
+    setInterval(() => { window.open("JavaScript:if(!window.noalert){alert(111);}") }, 1);
+    location.href="https://www.huawei.com";
   </script>
 </html>
